# building_LLM_scratch

./: .gitignore  Generative_AI.md  LLM_end_to_end.ipynb  README.md  References.md  Tokenizer_part.ipynb  TopK_TopP_Sampling_Guide.md  cuda_GPU_test.ipynb  flowchat.md  generate.md  instruction-data-with-response.json  llm_production_final.ipynb  pyproject.toml  python test_environment.ipynb  requirements.txt  test.mmd  tstCopilot.ipynb
LLM_classification/: LLM_classification_optuna.ipynb  LLM_classification_optuna_2.ipynb  llm_optuna.ipynb  llm_production_final.ipynb  llm_production_final_2.ipynb  main.py  pyproject.toml  python test_environment.ipynb  requirements.txt
LLM_classification/output/: optuna_best_trial_metrics.json
Notes_research/: 15_Self Attention.md  22_b_shortcut_connections.md  22_shortcut_connections.md  24_LLM Architecture.md  25_LLM Architecture.md  26_ LLM_Loss fun.md  26_LLM Loss function.ipynb  27_LLM_Loss.md  30_Top_K_LLM.md  32_a.md  33_Fine tuning_LLM.md  34_Dataloaders_LLM.md  37_Instruction fine-tuning dataset prep loading.ipynb  43_Build LLM from Scratch.md  44_Build Large Language Models From Scratch.md  HuggingFaceModels.md  Intro_Attension_notes.md  LLM Architecture.ipynb  LLM_Summary_notes_1.md  README2.md  Token_Embeddings_Lab4.ipynb  fill_between.ipynb
Research/: 14_Lab_Text to Context_Vector_P1.md  16_Causal self Attention.md  17_Multi-head.md  22_shortcut_connections.docx  Attension_Mechanism_notes.md  Finetuning.md  LLM_Summary_notes_2.md  LoRA_report.md  Optimize_methodes.md.txt  Positional Embedding_notes.md  RNN_LSTM.md  (+4 more)
(+25 files in other folders)
