[project]
name = "llm-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.18.0",
    "importlib>=1.0.4",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.1",
    "optuna>=3.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "tensorflow>=2.18.1",
    "tiktoken>=0.5.1",
    "tokenizers>=0.15.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.0",
    "xgboost>=2.0.0",
]
